[tool.poetry]
name = "driftctl_exporter"
version = "0.1.0"
description = ""
authors = ["gcavalcante8808"]

[tool.poetry.dependencies]
python = "^3.8"
plumbum = "1.7.0"
boto3 = "1.9.134"
aiohttp = "3.8.1"
prometheus-client = "^0.13.1"
json-logging = "^1.3.0"


[tool.poetry.dev-dependencies]
pytest = "7.0.1"
pytest-cov = "3.0.0"
pytest-aiohttp = "1.0.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
